--- a/index.html
+++ b/index.html
@@ -211,134 +211,139 @@
 
     <audio id="sound" src="225661-ComputerSFX-alerts-071.wav" preload="auto"></audio>
     <audio id="welcome" src="advertising-logo-199582.mp3" preload="auto"></audio>
-    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
-    <script>
-        // Initialize Supabase
-        const supabase = window.supabase.createClient('https://utgmmvofnginuwvzajig.supabase.co', 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InV0Z21tdm9mbmdpbnV3dnphamlnIiwicm9sZSI6ImFub24iLCJpYXQiOjE3MjE5NTczMzksImV4cCI6MjAzNzUzMzMzOX0.YWH5Ceiz0OI_h8M6wG1M2UsDXM_43i5UdopmYLGO7aE');
-        const sound = document.getElementById('sound');
-        const welcome = document.getElementById('welcome');
+ <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
+<script>
+    // Initialize Supabase
+    const supabase = window.supabase.createClient('https://utgmmvofnginuwvzajig.supabase.co', 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InV0Z21tdm9mbmdpbnV3dnphamlnIiwicm9sZSI6ImFub24iLCJpYXQiOjE3MjE5NTczMzksImV4cCI6MjAzNzUzMzMzOX0.YWH5Ceiz0OI_h8M6wG1M2UsDXM_43i5UdopmYLGO7aE');
+    const sound = document.getElementById('sound');
+    const welcome = document.getElementById('welcome');
 
-        let drinksData = [];
+    let drinksData = [];
 
-        document.getElementById('explore-button').addEventListener('click', async () => {
-            document.getElementById('welcome-popup').style.display = 'none';
-            document.getElementById('menu').style.display = 'block';
-            welcome.play();
+    document.getElementById('explore-button').addEventListener('click', async () => {
+        document.getElementById('welcome-popup').style.display = 'none';
+        document.getElementById('menu').style.display = 'block';
+        welcome.play();
 
-            await fetchDrinks();
-            renderDrinkCards();
+        await fetchDrinks();
+        renderDrinkCards();
+    });
+
+    async function fetchDrinks() {
+        const { data, error } = await supabase
+            .from('drinks')
+            .select('*');
+
+        if (error) {
+            console.error('Error fetching drinks:', error);
+            return;
+        }
+
+        drinksData = data;
+    }
+
+    function renderDrinkCards() {
+        const drinkCardsContainer = document.getElementById('drink-cards');
+        drinkCardsContainer.innerHTML = '';
+
+        drinksData.forEach(drink => {
+            const card = document.createElement('div');
+            card.className = 'drink-card';
+            card.innerHTML = `
+                <h3>${drink.name}</h3>
+                <p>${drink.description.substring(0, 50)}...</p>
+                <button onclick="viewDrink('${drink.name}')">View this Drink</button>
+            `;
+            drinkCardsContainer.appendChild(card);
         });
+    }
 
-        async function fetchDrinks() {
-            const { data, error } = await supabase
-                .from('drinks')
-                .select('*');
+    function viewDrink(drinkName) {
+        const drink = drinksData.find(d => d.name === drinkName);
+        if (drink) {
+            document.getElementById('drink-name').innerText = drink.name;
+            document.getElementById('drink-description').innerText = `Description: ${drink.description}`;
+            document.getElementById('drink-ingredients').innerText = `Ingredients: ${drink.ingredients}`;
+            document.getElementById('drink-details').style.display = 'block';
+            document.getElementById('menu').style.display = 'none';
+        }
+    }
 
-            if (error) {
-                console.error('Error fetching drinks:', error);
-                return;
+    document.getElementById('back-to-menu-button').addEventListener('click', () => {
+        document.getElementById('drink-details').style.display = 'none';
+        document.getElementById('menu').style.display = 'block';
+    });
+
+    document.getElementById('order-drink-button').addEventListener('click', () => {
+        const selectedDrink = document.getElementById('drink-name').innerText;
+        populateDrinkDropdown(selectedDrink);
+        document.getElementById('drink-details').style.display = 'none';
+        document.getElementById('order-form').style.display = 'block';
+    });
+
+    function populateDrinkDropdown(selectedDrink) {
+        const drinkSelect = document.getElementById('drink');
+        drinkSelect.innerHTML = '';
+        drinksData.forEach(drink => {
+            const option = document.createElement('option');
+            option.value = drink.name;
+            option.text = drink.name;
+            if (drink.name === selectedDrink) {
+                option.selected = true;
             }
-
-            drinksData = data;
-        }
-
-        function renderDrinkCards() {
-            const drinkCardsContainer = document.getElementById('drink-cards');
-            drinkCardsContainer.innerHTML = '';
-
-            drinksData.forEach(drink => {
-                const card = document.createElement('div');
-                card.className = 'drink-card';
-                card.innerHTML = `
-                    <h3>${drink.name}</h3>
-                    <p>${drink.description.substring(0, 50)}...</p>
-                    <button onclick="viewDrink('${drink.name}')">View this Drink</button>
-                `;
-                drinkCardsContainer.appendChild(card);
-            });
-        }
-
-        function viewDrink(drinkName) {
-            const drink = drinksData.find(d => d.name === drinkName);
-            if (drink) {
-                document.getElementById('drink-name').innerText = drink.name;
-                document.getElementById('drink-description').innerText = `Description: ${drink.description}`;
-                document.getElementById('drink-ingredients').innerText = `Ingredients: ${drink.ingredients}`;
-                document.getElementById('drink-details').style.display = 'block';
-                document.getElementById('menu').style.display = 'none';
-            }
-        }
-
-        document.getElementById('back-to-menu-button').addEventListener('click', () => {
-            document.getElementById('drink-details').style.display = 'none';
-            document.getElementById('menu').style.display = 'block';
+            drinkSelect.appendChild(option);
         });
+    }
 
-        document.getElementById('order-drink-button').addEventListener('click', () => {
-            const selectedDrink = document.getElementById('drink-name').innerText;
-            populateDrinkDropdown(selectedDrink);
-            document.getElementById('drink-details').style.display = 'none';
-            document.getElementById('order-form').style.display = 'block';
-        });
+    document.getElementById('drink-form').addEventListener('submit', async (event) => {
+        event.preventDefault();
+        const drink = document.getElementById('drink').value;
+        const id = Math.floor(1000 + Math.random() * 9000); // Generate a 4-digit ID
 
-        function populateDrinkDropdown(selectedDrink) {
-            const drinkSelect = document.getElementById('drink');
-            drinkSelect.innerHTML = '';
-            drinksData.forEach(drink => {
-                const option = document.createElement('option');
-                option.value = drink.name;
-                option.text = drink.name;
-                if (drink.name === selectedDrink) {
-                    option.selected = true;
-                }
-                drinkSelect.appendChild(option);
-            });
+        const { data, error } = await supabase
+            .from('orders')
+            .insert([{ id, drink, status: 'pending' }]);
+
+        if (error) {
+            console.error(error);
+            document.getElementById('order-message').innerText = 'Error placing order!';
+            return;
         }
 
-        document.getElementById('drink-form').addEventListener('submit', async (event) => {
-            event.preventDefault();
-            const drink = document.getElementById('drink').value;
-            const id = Math.floor(1000 + Math.random() * 9000); // Generate a 4-digit ID
+        // Retrieve existing orders from localStorage
+        let orderIds = JSON.parse(localStorage.getItem('orderIds')) || [];
+        // Add the new order ID to the list
+        orderIds.push(id);
+        localStorage.setItem('orderIds', JSON.stringify(orderIds));
+        localStorage.setItem('pendingNotify', 'true'); // Set pendingNotify to true
+        document.getElementById('order-id').innerText = id;
+        showPopup('success-popup');
+    });
 
-            const { data, error } = await supabase
-                .from('orders')
-                .insert([{ id, drink, status: 'pending' }]);
+    document.getElementById('close-form-button').addEventListener('click', () => {
+        document.getElementById('order-form').style.display = 'none';
+        document.getElementById('menu').style.display = 'block';
+    });
 
-            if (error) {
-                console.error(error);
-                document.getElementById('order-message').innerText = 'Error placing order!';
-                return;
-            }
-
-            localStorage.setItem('orderId', id);
-            localStorage.setItem('pendingNotify', 'true'); // Set pendingNotify to true
-            document.getElementById('order-id').innerText = id;
-            showPopup('success-popup');
-        });
-
-        document.getElementById('close-form-button').addEventListener('click', () => {
-            document.getElementById('order-form').style.display = 'none';
-            document.getElementById('menu').style.display = 'block';
-        });
-
-        function showPopup(popupId) {
-            const popup = document.getElementById(popupId);
-            if (popup) {
-                popup.classList.add('show');
-            }
+    function showPopup(popupId) {
+        const popup = document.getElementById(popupId);
+        if (popup) {
+            popup.classList.add('show');
         }
+    }
 
-        function closePopup(popupId) {
-            const popup = document.getElementById(popupId);
-            if (popup) {
-                popup.classList.remove('show');
-            }
+    function closePopup(popupId) {
+        const popup = document.getElementById(popupId);
+        if (popup) {
+            popup.classList.remove('show');
         }
+    }
 
-        // Poll for order status
-        async function checkOrderStatus() {
-            const userOrderId = localStorage.getItem('orderId');
-            if (userOrderId) {
+    // Poll for order status
+    async function checkOrderStatus() {
+        const orderIds = JSON.parse(localStorage.getItem('orderIds')) || [];
+        if (orderIds.length > 0) {
+            for (const userOrderId of orderIds) {
                 const { data: order, error } = await supabase
                     .from('orders')
                     .select('*')
@@ -348,25 +353,21 @@
                 if (error) {
                     if (error.code === 'PGRST116') {
                         // Treat PGRST116 error as a completed order
-                        document.title = "Your order is complete"
                         if (!localStorage.getItem('completeNotify')) {
                             localStorage.setItem('completeNotify', 'true');
                             playSound(); // Play sound for completed
                             showPopup('completed-popup');
-                            localStorage.removeItem('orderId');
-                            localStorage.removeItem('pendingNotify');
-                            localStorage.removeItem('inprogressNotify');
-                            localStorage.removeItem('completeNotify');
+                            // Remove the completed order ID
+                            removeOrderFromLocalStorage(userOrderId);
                         }
                     } else {
                         console.error(error);
                     }
-                    return;
+                    continue;
                 }
 
                 if (order) {
                     if (order.status === 'inprogress') {
-                       document.title = "Order in progress" 
                         if (!localStorage.getItem('inprogressNotify')) {
                             localStorage.setItem('inprogressNotify', 'true');
                             playSound(); // Play sound for in progress
@@ -377,24 +378,33 @@
                             localStorage.setItem('completeNotify', 'true');
                             playSound(); // Play sound for completed
                             showPopup('completed-popup');
-                            localStorage.removeItem('orderId');
-                            localStorage.removeItem('pendingNotify');
-                            localStorage.removeItem('inprogressNotify');
-                            localStorage.removeItem('completeNotify');
+                            removeOrderFromLocalStorage(userOrderId);
                         }
                     }
                 }
             }
         }
+    }
 
-        function playSound() {
-            // Ensure the sound is played by a user interaction
-            sound.play().catch(error => {
-                console.error('Failed to play sound:', error);
-            });
+    function removeOrderFromLocalStorage(orderId) {
+        let orderIds = JSON.parse(localStorage.getItem('orderIds')) || [];
+        orderIds = orderIds.filter(id => id !== orderId);
+        if (orderIds.length > 0) {
+            localStorage.setItem('orderIds', JSON.stringify(orderIds));
+        } else {
+            localStorage.removeItem('orderIds');
+            localStorage.removeItem('pendingNotify');
+            localStorage.removeItem('inprogressNotify');
+            localStorage.removeItem('completeNotify');
         }
+    }
 
-        setInterval(checkOrderStatus, 5000); // Check every 5 seconds
-    </script>
-</body>
-</html>
+    function playSound() {
+        // Ensure the sound is played by a user interaction
+        sound.play().catch(error => {
+            console.error('Failed to play sound:', error);
+        });
+    }
+
+    setInterval(checkOrderStatus, 5000); // Check every 5 seconds
+</script>
