--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -23,8 +22,7 @@
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             padding: 20px;
-            width: 100%;
-            max-width: 400px;
+            width: 300px;
             text-align: center;
             display: none;
         }
@@ -49,33 +47,33 @@
         .popup {
             display: none;
             position: fixed;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            width: 90%;
-            max-width: 400px;
-            background-color: #fff;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.7);
+            color: #fff;
             border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             padding: 20px;
             z-index: 1000;
-            text-align: center;
             overflow: auto;
+            text-align: center;
         }
         .popup.show {
             display: block;
         }
         .popup .title {
-            font-size: 22px;
+            font-size: 24px;
             font-weight: bold;
             margin-bottom: 10px;
         }
         .popup .message {
             margin-bottom: 20px;
-            font-size: 16px;
+            font-size: 18px;
         }
         .popup .checkmark {
-            font-size: 80px;
+            font-size: 100px;
             color: #28a745;
             margin-bottom: 20px;
         }
@@ -86,7 +84,7 @@
             color: #fff;
             cursor: pointer;
             padding: 10px;
-            font-size: 16px;
+            font-size: 14px;
         }
         .popup button:hover {
             background-color: #c82333;
@@ -95,11 +93,10 @@
         #welcome-popup {
             display: block; /* Display on page load */
             position: fixed;
-            top: 30%;
+            top: 20%;
             left: 50%;
             transform: translateX(-50%);
-            width: 90%;
-            max-width: 400px;
+            width: 300px;
             background-color: rgba(0, 0, 0, 0.8);
             color: #fff;
             border-radius: 8px;
@@ -132,8 +129,7 @@
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             padding: 15px;
-            width: 100%;
-            max-width: 180px;
+            width: 200px;
             text-align: center;
         }
         .drink-card h3 {
@@ -153,13 +149,14 @@
         .drink-card button:hover {
             background-color: #0056b3;
         }
-        @media (max-width: 600px) {
-            #menu, #order-form, #drink-details {
-                width: 90%;
-            }
-            .popup {
-                width: 90%;
-            }
+        #drink-details {
+            display: none;
+        }
+        #drink-details h2 {
+            margin-bottom: 15px;
+        }
+        #drink-details p {
+            margin-bottom: 15px;
         }
     </style>
 </head>
@@ -228,21 +225,19 @@
         document.getElementById('welcome-popup').style.display = 'none';
         document.getElementById('menu').style.display = 'block';
             // Play intro sound muted
-        console.log(`Sound muted: ${sound.muted}`)
             welcome.play();
                 await fetchDrinks();
             renderDrinkCards();
             sound.muted = true; // Mute audio
-        console.log(`Sound muted: ${sound.muted}`)
             sound.play().catch(error => {
                 console.error('Error playing intro sound:', error);
             });
 
             sound.onended = function(){
                 sound.muted = false; // Unmute audio
-                console.log(`Sound muted: ${sound.muted}`)
-            };
+            });
         });
+
     async function fetchDrinks() {
         const { data, error } = await supabase
             .from('drinks')
@@ -323,11 +318,7 @@
             document.getElementById('order-message').innerText = 'Error placing order!';
             return;
         }
-        /*sound.volume = 0.2
-        sound.play
-         sound.onended = function(){
-                sound.muted = 1.0; // Unmute audio
-            };*/
+
         // Retrieve existing orders from localStorage
         let orderIds = JSON.parse(localStorage.getItem('orderIds')) || [];
         // Add the new order ID to the list
@@ -354,103 +345,85 @@
         const popup = document.getElementById(popupId);
         if (popup) {
             popup.classList.remove('show');
-            if (popupId === 'success-popup') {
-                document.getElementById('order-form').style.display = 'none';
-                document.getElementById('menu').style.display = 'block';
+        }
+    }
+
+    // Poll for order status
+    async function checkOrderStatus() {
+        const orderIds = JSON.parse(localStorage.getItem('orderIds')) || [];
+        if (orderIds.length > 0) {
+            for (const userOrderId of orderIds) {
+                const { data: order, error } = await supabase
+                    .from('orders')
+                    .select('*')
+                    .eq('id', userOrderId)
+                    .single();
+
+                if (error) {
+                    if (error.code === 'PGRST116') {
+                        document.title = "Your order is complete"
+                        // Treat PGRST116 error as a completed order
+                        if (!localStorage.getItem('completeNotify')) {
+                            localStorage.setItem('completeNotify', 'true');
+                            playSound(); // Play sound for completed
+                            showPopup('completed-popup');
+                            // Reset notification flags
+                            resetNotificationFlags();
+                            // Remove the completed order ID
+                            removeOrderFromLocalStorage(userOrderId);
+                        }
+                    } else {
+                        console.error(error);
+                    }
+                    continue;
+                }
+
+                if (order) {
+                    if (order.status === 'inprogress') {
+                        document.title = "Order in progress"
+                        if (!localStorage.getItem('inprogressNotify')) {
+                            localStorage.setItem('inprogressNotify', 'true');
+                            playSound(); // Play sound for in progress
+                            showPopup('inprogress-popup');
+                        }
+                    } else if (order.status === 'completed') {
+                        if (!localStorage.getItem('completeNotify')) {
+                            localStorage.setItem('completeNotify', 'true');
+                            playSound(); // Play sound for completed
+                            showPopup('completed-popup');
+                            // Reset notification flags
+                            resetNotificationFlags();
+                            removeOrderFromLocalStorage(userOrderId);
+                        }
+                    }
+                }
             }
         }
     }
 
-// Poll for order status
-async function checkOrderStatus() {
-    const orderIds = JSON.parse(localStorage.getItem('orderIds')) || [];
-    if (orderIds.length > 0) {
-        for (const userOrderId of orderIds) {
-            const { data: order, error } = await supabase
-                .from('orders')
-                .select('*')
-                .eq('id', userOrderId)
-                .single();
-
-            if (error) {
-                if (error.code === 'PGRST116') {
-                    document.title = "Your order is complete";
-                    if (!localStorage.getItem('completeNotify')) {
-                        localStorage.setItem('completeNotify', 'true');
-                        triggerSoundAndPopup('completed-popup');
-                        removeOrderFromLocalStorage(userOrderId);
-                    }
-                } else {
-                    console.error(error);
-                }
-                continue;
-            }
-
-            if (order) {
-                if (order.status === 'inprogress') {
-                    document.title = "Order in progress";
-                    if (!localStorage.getItem('inprogressNotify')) {
-                        localStorage.setItem('inprogressNotify', 'true');
-                        triggerSoundAndPopup('inprogress-popup');
-                    }
-                } else if (order.status === 'completed') {
-                    document.title = "Your order is complete";
-                    if (!localStorage.getItem('completeNotify')) {
-                        localStorage.setItem('completeNotify', 'true');
-                        triggerSoundAndPopup('completed-popup');
-                        removeOrderFromLocalStorage(userOrderId);
-                    }
-                }
-            }
+    function removeOrderFromLocalStorage(orderId) {
+        let orderIds = JSON.parse(localStorage.getItem('orderIds')) || [];
+        orderIds = orderIds.filter(id => id !== orderId);
+        if (orderIds.length > 0) {
+            localStorage.setItem('orderIds', JSON.stringify(orderIds));
+        } else {
+            localStorage.removeItem('orderIds');
         }
     }
-}
 
-// Function to trigger sound and popup
-function triggerSoundAndPopup(popupId) {
-    // Ensure the sound is played by a user interaction
-    playSound();
-    showPopup(popupId);
-}
-
-// Handle visibility change
-document.addEventListener('visibilitychange', () => {
-    if (document.visibilityState === 'visible') {
-        // Recheck order status when user returns to the page
-        checkOrderStatus();
+    function resetNotificationFlags() {
+        localStorage.removeItem('inprogressNotify');
+        localStorage.removeItem('completeNotify');
     }
-});
 
-// Function to remove order from local storage
-function removeOrderFromLocalStorage(orderId) {
-    let orderIds = JSON.parse(localStorage.getItem('orderIds')) || [];
-    orderIds = orderIds.filter(id => id !== orderId);
-    if (orderIds.length > 0) {
-        localStorage.setItem('orderIds', JSON.stringify(orderIds));
-    } else {
-        localStorage.removeItem('orderIds');
-    }
-    resetNotificationFlags();
-}
-
-// Reset notification flags
-function resetNotificationFlags() {
-    localStorage.removeItem('inprogressNotify');
-    localStorage.removeItem('completeNotify');
-}
-
-// Function to play sound
-function playSound() {
-    // Play the sound only if the document is visible
-    if (document.visibilityState === 'visible') {
+    function playSound() {
+        // Ensure the sound is played by a user interaction
         sound.play().catch(error => {
             console.error('Failed to play sound:', error);
         });
     }
-}
 
-// Regularly check order status
-setInterval(checkOrderStatus, 5000); // Check every 5 seconds
+    setInterval(checkOrderStatus, 5000); // Check every 5 seconds
 </script>
 </body>
 </html>
