--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -22,7 +23,8 @@
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             padding: 20px;
-            width: 300px;
+            width: 100%;
+            max-width: 400px;
             text-align: center;
             display: none;
         }
@@ -47,33 +49,33 @@
         .popup {
             display: none;
             position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.7);
-            color: #fff;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            width: 90%;
+            max-width: 400px;
+            background-color: #fff;
             border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
             padding: 20px;
             z-index: 1000;
-            overflow: auto;
             text-align: center;
+            overflow: auto;
         }
         .popup.show {
             display: block;
         }
         .popup .title {
-            font-size: 24px;
+            font-size: 22px;
             font-weight: bold;
             margin-bottom: 10px;
         }
         .popup .message {
             margin-bottom: 20px;
-            font-size: 18px;
+            font-size: 16px;
         }
         .popup .checkmark {
-            font-size: 100px;
+            font-size: 80px;
             color: #28a745;
             margin-bottom: 20px;
         }
@@ -84,7 +86,7 @@
             color: #fff;
             cursor: pointer;
             padding: 10px;
-            font-size: 14px;
+            font-size: 16px;
         }
         .popup button:hover {
             background-color: #c82333;
@@ -93,10 +95,11 @@
         #welcome-popup {
             display: block; /* Display on page load */
             position: fixed;
-            top: 20%;
+            top: 30%;
             left: 50%;
             transform: translateX(-50%);
-            width: 300px;
+            width: 90%;
+            max-width: 400px;
             background-color: rgba(0, 0, 0, 0.8);
             color: #fff;
             border-radius: 8px;
@@ -129,7 +132,8 @@
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             padding: 15px;
-            width: 200px;
+            width: 100%;
+            max-width: 180px;
             text-align: center;
         }
         .drink-card h3 {
@@ -149,14 +153,13 @@
         .drink-card button:hover {
             background-color: #0056b3;
         }
-        #drink-details {
-            display: none;
-        }
-        #drink-details h2 {
-            margin-bottom: 15px;
-        }
-        #drink-details p {
-            margin-bottom: 15px;
+        @media (max-width: 600px) {
+            #menu, #order-form, #drink-details {
+                width: 90%;
+            }
+            .popup {
+                width: 90%;
+            }
         }
     </style>
 </head>
@@ -225,19 +228,21 @@
         document.getElementById('welcome-popup').style.display = 'none';
         document.getElementById('menu').style.display = 'block';
             // Play intro sound muted
+        console.log(`Sound muted: ${sound.muted}`)
             welcome.play();
                 await fetchDrinks();
             renderDrinkCards();
             sound.muted = true; // Mute audio
+        console.log(`Sound muted: ${sound.muted}`)
             sound.play().catch(error => {
                 console.error('Error playing intro sound:', error);
             });
 
             sound.onended = function(){
                 sound.muted = false; // Unmute audio
-            });
+                console.log(`Sound muted: ${sound.muted}`)
+            };
         });
-
     async function fetchDrinks() {
         const { data, error } = await supabase
             .from('drinks')
@@ -318,7 +323,11 @@
             document.getElementById('order-message').innerText = 'Error placing order!';
             return;
         }
-
+        /*sound.volume = 0.2
+        sound.play
+         sound.onended = function(){
+                sound.muted = 1.0; // Unmute audio
+            };*/
         // Retrieve existing orders from localStorage
         let orderIds = JSON.parse(localStorage.getItem('orderIds')) || [];
         // Add the new order ID to the list
@@ -345,85 +354,103 @@
         const popup = document.getElementById(popupId);
         if (popup) {
             popup.classList.remove('show');
+            if (popupId === 'success-popup') {
+                document.getElementById('order-form').style.display = 'none';
+                document.getElementById('menu').style.display = 'block';
+            }
         }
     }
 
-    // Poll for order status
-    async function checkOrderStatus() {
-        const orderIds = JSON.parse(localStorage.getItem('orderIds')) || [];
-        if (orderIds.length > 0) {
-            for (const userOrderId of orderIds) {
-                const { data: order, error } = await supabase
-                    .from('orders')
-                    .select('*')
-                    .eq('id', userOrderId)
-                    .single();
+// Poll for order status
+async function checkOrderStatus() {
+    const orderIds = JSON.parse(localStorage.getItem('orderIds')) || [];
+    if (orderIds.length > 0) {
+        for (const userOrderId of orderIds) {
+            const { data: order, error } = await supabase
+                .from('orders')
+                .select('*')
+                .eq('id', userOrderId)
+                .single();
 
-                if (error) {
-                    if (error.code === 'PGRST116') {
-                        document.title = "Your order is complete"
-                        // Treat PGRST116 error as a completed order
-                        if (!localStorage.getItem('completeNotify')) {
-                            localStorage.setItem('completeNotify', 'true');
-                            playSound(); // Play sound for completed
-                            showPopup('completed-popup');
-                            // Reset notification flags
-                            resetNotificationFlags();
-                            // Remove the completed order ID
-                            removeOrderFromLocalStorage(userOrderId);
-                        }
-                    } else {
-                        console.error(error);
+            if (error) {
+                if (error.code === 'PGRST116') {
+                    document.title = "Your order is complete";
+                    if (!localStorage.getItem('completeNotify')) {
+                        localStorage.setItem('completeNotify', 'true');
+                        triggerSoundAndPopup('completed-popup');
+                        removeOrderFromLocalStorage(userOrderId);
                     }
-                    continue;
+                } else {
+                    console.error(error);
                 }
+                continue;
+            }
 
-                if (order) {
-                    if (order.status === 'inprogress') {
-                        document.title = "Order in progress"
-                        if (!localStorage.getItem('inprogressNotify')) {
-                            localStorage.setItem('inprogressNotify', 'true');
-                            playSound(); // Play sound for in progress
-                            showPopup('inprogress-popup');
-                        }
-                    } else if (order.status === 'completed') {
-                        if (!localStorage.getItem('completeNotify')) {
-                            localStorage.setItem('completeNotify', 'true');
-                            playSound(); // Play sound for completed
-                            showPopup('completed-popup');
-                            // Reset notification flags
-                            resetNotificationFlags();
-                            removeOrderFromLocalStorage(userOrderId);
-                        }
+            if (order) {
+                if (order.status === 'inprogress') {
+                    document.title = "Order in progress";
+                    if (!localStorage.getItem('inprogressNotify')) {
+                        localStorage.setItem('inprogressNotify', 'true');
+                        triggerSoundAndPopup('inprogress-popup');
+                    }
+                } else if (order.status === 'completed') {
+                    document.title = "Your order is complete";
+                    if (!localStorage.getItem('completeNotify')) {
+                        localStorage.setItem('completeNotify', 'true');
+                        triggerSoundAndPopup('completed-popup');
+                        removeOrderFromLocalStorage(userOrderId);
                     }
                 }
             }
         }
     }
+}
 
-    function removeOrderFromLocalStorage(orderId) {
-        let orderIds = JSON.parse(localStorage.getItem('orderIds')) || [];
-        orderIds = orderIds.filter(id => id !== orderId);
-        if (orderIds.length > 0) {
-            localStorage.setItem('orderIds', JSON.stringify(orderIds));
-        } else {
-            localStorage.removeItem('orderIds');
-        }
+// Function to trigger sound and popup
+function triggerSoundAndPopup(popupId) {
+    // Ensure the sound is played by a user interaction
+    playSound();
+    showPopup(popupId);
+}
+
+// Handle visibility change
+document.addEventListener('visibilitychange', () => {
+    if (document.visibilityState === 'visible') {
+        // Recheck order status when user returns to the page
+        checkOrderStatus();
     }
+});
 
-    function resetNotificationFlags() {
-        localStorage.removeItem('inprogressNotify');
-        localStorage.removeItem('completeNotify');
+// Function to remove order from local storage
+function removeOrderFromLocalStorage(orderId) {
+    let orderIds = JSON.parse(localStorage.getItem('orderIds')) || [];
+    orderIds = orderIds.filter(id => id !== orderId);
+    if (orderIds.length > 0) {
+        localStorage.setItem('orderIds', JSON.stringify(orderIds));
+    } else {
+        localStorage.removeItem('orderIds');
     }
+    resetNotificationFlags();
+}
 
-    function playSound() {
-        // Ensure the sound is played by a user interaction
+// Reset notification flags
+function resetNotificationFlags() {
+    localStorage.removeItem('inprogressNotify');
+    localStorage.removeItem('completeNotify');
+}
+
+// Function to play sound
+function playSound() {
+    // Play the sound only if the document is visible
+    if (document.visibilityState === 'visible') {
         sound.play().catch(error => {
             console.error('Failed to play sound:', error);
         });
     }
+}
 
-    setInterval(checkOrderStatus, 5000); // Check every 5 seconds
+// Regularly check order status
+setInterval(checkOrderStatus, 5000); // Check every 5 seconds
 </script>
 </body>
 </html>
